labs/vwan-ipsec-over-er-backup/show-output/restore-after-d1/snapshot/20260929T055256Z/14c-gcp-firewall-rules.json
# action: read-only evidence capture
# question_id: Q-GCP-UNDERLAY
# plane: gcp-underlay
# expected_effect: Partner attachment, instance aliases, VPC routes and firewall state match the intended underlay.
# utc_started: 2026-09-29T05:55:06.3930536Z
# utc_ended: 2026-09-29T05:55:08.1524235Z
# local_started: 2026-09-29T07:55:06.3930536+02:00
# local_ended: 2026-09-29T07:55:08.1524235+02:00
# command: gcloud compute firewall-rules list --project <GCP_PROJECT_ID> --format=json
# exit_code: 0
# stdout:
[
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-09-28T02:32:47.900-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7290566753004260048",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2026-09-28T02:32:47.705-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "8715642480979577552",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2026-09-28T02:32:47.835-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5744025480132528848",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2026-09-28T02:32:47.770-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "5165173766780062416",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "udp",
        "ports": [
          "500",
          "4500"
        ]
      },
      {
        "IPProtocol": "esp"
      }
    ],
    "creationTimestamp": "2026-09-28T02:41:16.555-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "8246280036736796883",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "fw-ike-ver-09281131",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/vpc-ver-09281131",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/fw-ike-ver-09281131",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "ipsec-cpe"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "179",
          "22",
          "8080"
        ]
      }
    ],
    "creationTimestamp": "2026-09-28T02:41:16.592-07:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2434359446027602131",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "fw-private-ver-09281131",
    "network": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/networks/vpc-ver-09281131",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/<GCP_PROJECT_ID>/global/firewalls/fw-private-ver-09281131",
    "sourceRanges": [
      "35.235.240.0/20",
      "10.250.0.0/16",
      "10.253.0.0/16",
      "10.240.0.0/15"
    ],
    "targetTags": [
      "ipsec-cpe"
    ]
  }
]
# stderr:
